# PyRIID

./: .flake8  .gitignore  CONTRIBUTORS.md  LICENSE.md  NOTICE.md  README.md  mkdocs.yml  pyproject.toml  requirements.txt  run_tests.ps1  run_tests.sh  setup.cfg  setup.py
.github/workflows/: build-and-publish-docs.yml  build-and-run-tests.yml  install-deps-and-run-tests.yml  publish-to-pypi.yml  publish-to-test-pypi.yml  run-examples.yml  run-linting.yml
docs/: api.md  examples_api.md  generate_api_md.py  howto.md  index.md  riid_api.md  tests_api.md
examples/: __init__.py  classifier_comparison.py  confusion_matrix.py  custom_loss_and_metric.py  difficulty_score.py  energy_calibration.py  event_detection.py  multi_event_classifier.py  neural_network_classifier.py  plot_spectra.py  requirements.txt  run_examples.py  seed_mixing.py  synthesize_passbys.py  synthesize_seeds.py  synthesize_spectra.py
examples/2022-11-14/: Demo.ipynb  spec_csi_many_fgs_many_bgs.yaml  spec_nai_basic.yaml  spec_nai_many_fgs_many_bgs.yaml  spec_nai_many_fgs_one_bg.yaml
examples/courses/Primer 1/: Primer1.ipynb  spec_csi_many_sources.yaml  spec_nai_few_sources.yaml  spec_nai_many_sources.yaml
examples/courses/Primer 2/: Primer 2.ipynb
examples/courses/Primer 2/seed_configs/: advanced.yaml  basic.yaml  problem.yaml
examples/data/: difficulty_score.py
examples/data/conversion/: aipt_to_ss.py  pcf_to_ss.py  topcoder_to_ss.py
examples/data/preprocessing/: energy_calibration.py
examples/data/synthesis/: mix_seeds.py  synthesize_passbys.py  synthesize_seeds.py  synthesize_seeds_advanced.py  synthesize_seeds_basic.py  synthesize_seeds_custom.py  synthesize_spectra.py
examples/modeling/: anomaly_detection.py  arad.py  arad_latent_prediction.py  classifier_comparison.py  custom_loss_and_metric.py  label_proportion_estimation.py  multi_event_classifier.py  neural_network_classifier.py  nn_classifier_with_batch_generation.py
examples/visualization/: confusion_matrix.py  distance_matrix.py  plot.ipynb  plot_fg_bg_counts.py  plot_sampleset_compare_to.py  plot_spectra.py  plots.ipynb
pdoc/: config.mako
riid/: __init__.py  anomaly.py  data.py  gadras.py  list_mode.py  metrics.py  sampleset.py  synthetic.py  visualize.py
riid/cli/: main.py  setup.py
riid/data/: __init__.py  labeling.py  sampleset.py
riid/data/converters/: __init__.py  aipt.py  topcoder.py
riid/data/synthetic/: __init__.py  base.py  passby.py  seed.py  static.py
riid/gadras/: __init__.py  api.py  api_schema.json  pcf.py
riid/losses/: __init__.py  sparsemax.py
riid/models/: __init__.py  base.py  bayes.py  layers.py  losses.py  metrics.py  neural_nets.py  poisson_bayes.py
riid/models/losses/: __init__.py  sparsemax.py
riid/models/neural_nets/: __init__.py  arad.py  basic.py  lpe.py
tests/: _gadras_db.pcf  anomaly_tests.py  bayes_tests.py  config_tests.py  data_tests.py  gadras_tests.py  identify_tests.py  model_tests.py  poisson_bayes_tests.py  sampleset_tests.py  seedmixer_tests.py  staticsynth_tests.py  visualize_tests.py
