[build-system]
requires = ["setuptools >= 66", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["riid"]

[project]
name = "riid"
description = "Machine learning-based models and utilities for radioisotope identification"
version = "2.0.0"
maintainers = [
    {name="Tyler Morrow", email="tmorro@sandia.gov"},
]
authors = [
    {name="Tyler Morrow"},
    {name="Nathan Price"},
    {name="Travis McGuire"},
    {name="Tyler Ganter"},
    {name="Aislinn Handley"},
    {name="Paul Thelen"},
    {name="Alan Van Omen"},
    {name="Leon Ross"},
    {name="Alyshia Bustos"},
]
readme = "README.md"
license = {file = "LICENSE.md"}
classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Intended Audience :: Developers',
    'Intended Audience :: Education',
    'Intended Audience :: Science/Research',
    'License :: OSI Approved :: BSD License',
    'Topic :: Scientific/Engineering',
    'Topic :: Scientific/Engineering :: Mathematics',
    'Topic :: Scientific/Engineering :: Artificial Intelligence',
    'Topic :: Software Development',
    'Topic :: Software Development :: Libraries',
    'Topic :: Software Development :: Libraries :: Python Modules',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3 :: Only',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
]
keywords = ["pyriid", "riid", "machine learning", "radioisotope identification", "gamma spectrum"]

requires-python = ">=3.8,<3.11"
dependencies = [
    "jsonschema                     ==4.17.*",
    "matplotlib                     ==3.7.*",
    "pyyaml                         ==6.0.*",
    "seaborn                        ==0.12.*",
    "tf2onnx                        ==1.14.*",
    "tqdm                           ==4.65.*",
    "numpy                          ==1.23.*",
    "onnxruntime                    ==1.15.*",
    "pandas                         ==2.0.*",
    "pythonnet                      ==3.0.*; platform_system == 'Windows'",
    "tables                         ==3.8.*",
    "tensorflow                     ==2.12.*",
    "tensorflow-io                  ==0.27.*",
    "tensorflow-model-optimization  ==0.7.*",
    "tensorflow-probability         ==0.20.*",
    "typeguard                      ==2.7.*",
    "scikit-learn                   ==1.2.*",
]

[project.optional-dependencies]
dev = [
    "flake8",
    "coverage",
    "ipykernel",
    "tabulate",
]

[project.urls]
repository = "https://github.com/sandialabs/PyRIID"
