[build-system]
requires = ["setuptools >= 68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["riid*"]
namespaces = false

[tool.setuptools.package-data]
"riid.gadras" = ["*.json"]

[project]
name = "riid"
description = "Machine learning-based models and utilities for radioisotope identification"
version = "2.2.0"
maintainers = [
    {name="Tyler Morrow", email="tmorro@sandia.gov"},
]
authors = [
    {name="Tyler Morrow"},
    {name="Nathan Price"},
    {name="Travis McGuire"},
    {name="Tyler Ganter"},
    {name="Aislinn Handley"},
    {name="Paul Thelen"},
    {name="Alan Van Omen"},
    {name="Leon Ross"},
    {name="Alyshia Bustos"},
]
readme = "README.md"
license = {file = "LICENSE.md"}
classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Intended Audience :: Developers',
    'Intended Audience :: Education',
    'Intended Audience :: Science/Research',
    'License :: OSI Approved :: BSD License',
    'Topic :: Scientific/Engineering',
    'Topic :: Scientific/Engineering :: Mathematics',
    'Topic :: Scientific/Engineering :: Artificial Intelligence',
    'Topic :: Software Development',
    'Topic :: Software Development :: Libraries',
    'Topic :: Software Development :: Libraries :: Python Modules',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
]
keywords = ["pyriid", "riid", "machine learning", "radioisotope identification", "gamma spectrum"]

requires-python = ">=3.10,<3.13"
dependencies = [
    "jsonschema                     ==4.23.*",  # 3.8 - 3.13
    "matplotlib                     ==3.9.*",   # 3.9 - 3.12
    "numpy                          ==1.26.*",  # 3.9 - 3.12, also to be limited by onnx 1.16.2
    "pandas                         ==2.2.*",   # >= 3.9
    "pythonnet                      ==3.0.3; platform_system == 'Windows'",  # 3.7 - 3.12
    "pyyaml                         ==6.0.*",   # >= 3.6
    "tables                         ==3.10.*",   # >= 3.9
    "scikit-learn                   ==1.5.*",   # 3.9 - 3.12
    "scipy                          ==1.13.*",  # >= 3.10
    "seaborn                        ==0.13.*",  # >= 3.8
    "tensorflow                     ==2.16.*",  # 3.9 - 3.12
    "tensorflow-model-optimization  ==0.8.*",   # 3.7 - 3.12
    "onnx                           ==1.16.1",  # 3.7 - 3.10
    "tf2onnx                        ==1.16.1",  # 3.7 - 3.10
    "tqdm                           ==4.66.*",  # >= 3.7
    "typeguard                      ==4.3.*",   # 3.9 - 3.12
]

[project.optional-dependencies]
dev = [
    "coverage",
    "ipykernel",
    "flake8",
    "flake8-quotes",
    "tabulate",
]

[project.urls]
Documentation = "https://sandialabs.github.io/PyRIID"
Repository = "https://github.com/sandialabs/PyRIID"
